add missing ical on absence on colleagues from sick notes